# MaTouch-YT

./: README.md
01-Davincy-HID/PIO/: platformio.ini
01-Davincy-HID/PIO/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
01-Davincy-HID/PIO/lib/ui/src/components/: ui_comp_hook.c
01-Davincy-HID/PIO/lib/ui/src/images/: ui_img_images_bg_png.c  ui_img_images_btn_delete_png.c  ui_img_images_btn_next_png.c  ui_img_images_btn_previous_png.c  ui_img_images_btn_ripple_png.c  ui_img_images_btn_split_png.c
01-Davincy-HID/PIO/lib/ui/src/screens/: ui_Screen1.c
01-Davincy-HID/PIO/src/: lvgl_setup.cpp  lvgl_setup.h  main.cpp  pins.h
01-Davincy-HID/SLS/: rotary test.sll  rotary test.spj
